--- a/src/tags.html
+++ b/src/tags.html
@@ -1,4 +1,6 @@
 ---
+pageId: "Tags"
+layout: "base.html"
 pagination:
   data: collections
   size: 1
@@ -9,35 +11,17 @@ eleventyComputed:
   title: Posts taggés avec {{ tag }}
 ---
 
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    {% include "head.html"%}
-  </head>
-  <body>
-    {% include "color-picker.html"%}
-    <div id="normal-page-container">
-      <header>
-        {% include "mobilenav.html"%} {% include "navigation.html"%}
-      </header>
-      <main id="tags-page">
-        <h1>Posts taggés avec "<span class="tags-style">{{ tag }}</span>"</h1>
+<h1>Posts taggés avec "<span class="tags-style">{{ tag }}</span>"</h1>
 
-        {% for post in collections[tag] | reverse %}
-        <ul id="tags-page-ul">
-          <li id="tags-page-li">
-            <h2><a href="{{post.url}}">{{post.data.title}}</a></h2>
-            <time
-              class="tags-date"
-              datetime="{{ post.data.date | date('dd LLLL yyyy') }}"
-              >{{ post.data.date | date('dd LLLL yyyy') }}</time
-            >
-          </li>
-        </ul>
-        {% endfor %}
-      </main>
-      <footer id="footer">{% include "footer.html"%}</footer>
-    </div>
-    {% include "loadscripts.html"%}
-  </body>
-</html>
+{% for post in collections[tag] | reverse %}
+<ul id="tags-page-ul">
+  <li id="tags-page-li">
+    <h2><a href="{{post.url}}">{{post.data.title}}</a></h2>
+    <time
+      class="tags-date"
+      datetime="{{ post.data.date | date('dd LLLL yyyy') }}"
+      >{{ post.data.date | date('dd LLLL yyyy') }}</time
+    >
+  </li>
+</ul>
+{% endfor %}
