comment index.json data fetching

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@ layout: "base.html"
     <hr />
   </header>
 
+  <!-- j'apelle les données de index.json pour présenter les projets -->
   {% for projet in projets %}
   <article class="homepage-projets-grid-item">
     <div class="homepage-projets-grid-item__left">
