build(shortcode update component for blog entries) & fix(balise title colophon page) & enhancenment(clophon.json)

--- a/src/colophon/colophon.html
+++ b/src/colophon/colophon.html
@@ -1,5 +1,5 @@
 ---
-title: Indications sur la façon dont j'ai conçue mon site web
+title: Conception du site et blogroll
 pageId: "Colophon"
 layout: "base.html"
 ---
