--- a/src/404.html
+++ b/src/404.html
@@ -1,12 +1,13 @@
 ---
 title: Erreur 404
 permalink: 404.html
+type: "Page"
 ---
 
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    {% include "head.html"%}
+    {% include "head.njk"%}
   </head>
   <body style=" background-color: rgb(21, 21, 21);
   ">
