--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 title: "Développement web et management de projets numériques à Nantes"
 pageId: "Homepage"
 layout: "base.html"
+type: "Page"
 ---
 
 <div id="homepage-profil" class="intersect">
