--- a/src/projets/projetmairies/projetmairies.html
+++ b/src/projets/projetmairies/projetmairies.html
@@ -1,6 +1,7 @@
 ---
 title: Développement d'un site de Mairie facile à administrer et plaisant à utiliser
 pageId: Projet
+type: "Page"
 layout: base.html
 ---
 <h2>
