--- a/src/projets/projetnewsletter/projetnewsletter.html
+++ b/src/projets/projetnewsletter/projetnewsletter.html
@@ -1,6 +1,7 @@
 ---
 title: Développement d'un site d'inscription et d'envoi de newsletter. Intégration d'email HTML responsive
 pageId: Projet
+type: "Page"
 layout: base.html
 ---
 <h2>
