fix(og image) & opengraph(index desc)

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 ---
-title: "Développement web et management de projets numériques à Nantes"
+title: "Téotime Pacreau"
+description: "Gestion de projet numérique et développement web à Nantes"
 pageId: "Homepage"
 layout: "base.html"
 type: "Page"
