--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -22,7 +22,7 @@ type: "Page"
   <div aria-hidden="true" class="hr-parent"><hr /></div>
   <details class="travail-titre-poste">
     <summary aria-label="Titre du poste" class="travail-titre-poste">
-      Apprenti en gestion de projet et conduite du changement chez
+      Apprenti en conduite de projets numériques chez
       <a
         href="https://www.prefectures-regions.gouv.fr/pays-de-la-loire/Region-et-institutions/Organisation-administrative-de-la-region/Secretariat-General-pour-les-Affaires-Regionales-SGAR/Etat-LIN-le-Laboratoire-d-Innovation-Publique-de-l-Etat-en-region-Pays-de-la-Loire/Etat-LIN-qu-est-ce-que-c-est"
         target="_blank"
@@ -36,19 +36,19 @@ type: "Page"
       class="travail-prose"
       id="desc-mission-1"
     >
-      <li>Conduite de projets de transformation publique en mode projet.</li>
+      <li>Conduite de 2 projets de transformation numérique
+        en phase cadrage et AMOA (via mode produit :
+        feuille de route produit, user stories, backlog,
+        coaching d'agents...).</li>
       <li>
-        Appui aux services de l’État en Pays de la Loire dans leurs projets de
-        conduite du changement (outillage organisationnel, diagnostic
-        stratégique...).
+        Appui aux services de l’État en Pays de la Loire dans
+leurs projets de conduite du changement (outillage
+organisationnel, diagnostic stratégique...) & mise en
+place de mode projet.
       </li>
       <li>
-        Coordination et accompagnement de 2 projets de transformation numérique
-        (AMOA, MOE...).
-      </li>
-      <li>
-        Collaboration avec une équipe de designer de services : appropriation de
-        la méthode design et complémentarité avec le mode projet.
+        Collaboration en continu avec une équipe de designer de
+services : appropriation de la méthode <em>design</em>.
       </li>
       <li>
         Co-animation du réseau des
@@ -57,10 +57,6 @@ type: "Page"
           >"Innov’acteurs de la transformation publique"</a
         >
         (réseau d'essaimage de l'innovation publique, 50 agents).
-      </li>
-      <li>
-        Développement de la transversalité avec les services de transformation
-        numérique et managériale
       </li>
     </ul>
   </details>
@@ -244,10 +240,10 @@ type: "Page"
 <h2 aria-hidden="true">Compétences</h2>
 <section aria-label="Mes compétences" class="competences">
   <ul class="competences-details">
-    <li>Conduite de projet numérique (AMOA, MOE)</li>
+    <li>Conduite de projet numérique</li>
     <li>Conduite du changement</li>
-    <li>Diagnostic et conseil en transformation des organisations</li>
     <li>Gestion de projet</li>
+    <li>Diagnostic et conseil en transformation des organisations</li>
   </ul>
   <ul class="competences-details">
     <li>HTML</li>
@@ -260,13 +256,13 @@ type: "Page"
     <li>
       <a href="https://fastify.dev/" target="_blank">Fastify</a>
     </li>
-    <li>Git & Github</li>
+    <li>Git, Github, Gitlab</li>
     <li>
       <a href="https://www.11ty.dev/" target="_blank">Eleventy</a>
     </li>
-    <li>Vite</li>
-    <li>Svelte</li>
     <li>SQL</li>
+    <li>Modélisation de base de données relationnelles</li>
+    <li>Docker</li>
   </ul>
 </section>
 
