shortcode(sidenote margin)

--- a/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.html
+++ b/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.html
@@ -215,28 +215,11 @@ eleventyComputed:
   peu à se tourner vers des preuves de concepts tangibles, qui sont pourtant une
   opportunité réelle de fédérer les équipes autour d’un changement :
 </p>
-<blockquote>
-  <p>
-    On nous apprend à valoriser les idées au-dessus de l’action, les choses
-    spirituelles au dessus des choses matérielles, le conceptuel au-dessus du
-    pragmatique et la logique au-dessus de l’intuition.
-    <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"
-      ><sup>1</sup></a
-    >
-  </p>
-</blockquote>
 
-<span class="footnote" id="fn1">
-  BORJA DE MOZOTA, Brigitte. Quarante ans de recherche en design management :
-  une revue de littérature et des pistes pour l’avenir.
-  <em>Sciences du design n°7 : Design Management</em>. Presses Universitaires de
-  France, 2018, p.28-45<a
-    href="#fnref1"
-    class="footnote-back"
-    role="doc-backlink"
-    >↩︎</a
-  >
-</span>
+{% citationsmarginales "BORJA DE MOZOTA, Brigitte. <em>Quarante ans de recherche en design management : une revue de littérature et des pistes pour l’avenir.</em> Sciences du design n°7 : Design Management. Presses Universitaires de France, 2018, p.28-45" %}
+On nous apprend à valoriser les idées au-dessus de l’action, les choses spirituelles au dessus des choses matérielles, le conceptuel au-dessus du pragmatique et la logique au-dessus de l’intuition.
+{% endcitationsmarginales %}
+
 <h3 id="le-design-de-service-quest-ce-que-cest">
   Le design de services, qu’est-ce que c’est ?
 </h3>
